force-app/main/default/objects/Litigation__c/Litigation__c.object-meta.xml
<CustomObject>
    <label>Litigation</label>
    <nameField>
        <label>Litigation Style</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litigation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>