force-app/main/default/objects/Litigation__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Litigations (Defendant)</relationshipLabel>
    <relationshipName>LitigationDefendant</relationshipName>
    <type>Lookup</type>
</CustomField>