force-app/main/default/objects/Litigation__c/fields/Filed__c.field-meta.xml
<CustomField>
    <fullName>Filed__c</fullName>
    <label>Filed</label>
    <type>Date</type>
</CustomField>