force-app/main/default/objects/Litigation__c/fields/Plaintiff__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plaintiff</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LitigationPlaintiff</relationshipLabel>
    <relationshipName>Litigations</relationshipName>
    <type>Lookup</type>
</CustomField>